simplify public error responses
